# blockchain

./: CMakeLists.txt  README.md  test.cpp
libs/utils/: CMakeLists.txt
libs/utils/block/: block.cpp  block.hpp  blockbuilder.cpp  blockbuilder.hpp  chainverifier.cpp  chainverifier.hpp
libs/utils/chain/: chain.hpp
libs/utils/ledger/: ledgerio.cpp  ledgerio.hpp
libs/utils/serialization/: deserialize.cpp  deserialize.hpp  serialize.cpp  serialize.hpp
networking/: CMakeLists.txt
src/: CMakeLists.txt  mainApplication.cpp
src/testing/: CMakeLists.txt  tester.cpp  tester.hpp  testing.cpp
src/testing/libs/logging/: test_logger.cpp  test_logger.hpp
src/testing/libs/utils/block/: block_tests.cpp  blockbuilder_tests.cpp  chainverifier_tests.cpp
utils/: CMakeLists.txt  block.cpp
utils/block/: block.cpp
